Edit margin and spacing issues with header text and submit button, and make dropdown element more compatible with other browsers

--- a/styles.css
+++ b/styles.css
@@ -23,15 +23,21 @@ body {
   }
 }
 
+header {
+  margin: 0 15px;
+}
+
 h1 {
   font-family: 'Poppins';
   font-size: 2.5rem;
-  margin-bottom: 0;
+  letter-spacing: normal;
+  line-height: 1.25;
+  margin: 20px auto 0;
 }
 
 header p {
   font-style: italic;
-  margin: 5px 15px 0;
+  margin: 7px auto 0;
   text-shadow: 2px 0 1px black;
 }
 
@@ -41,7 +47,7 @@ form {
   border-radius: 7px;
   display: flex;
   flex-direction: column;
-  margin: 25px auto;
+  margin: 20px auto;
   padding: calc(10px + 1.5vw);
   text-align: left;
   max-width: 750px;
@@ -99,41 +105,27 @@ fieldset {
 }
 
 select {
-  -webkit-appearance: none;
   -moz-appearance: none;
-  -ms-appearance: none;
-  -o-appearance: none;
+	-webkit-appearance: none;
   appearance: none;
-}
-
-.select-wrapper {
-  position: relative;
-}
-
-.select-wrapper::after {
-  content: '▼';
-  color: #434B67;
-  font-family: FontAwesome;
-  font-size: 0.8rem;
-  font-weight: bold;
-  position: absolute;
-  top: 12px;
-  right: 15px;
-  pointer-events: none;
-}
-
-select::-ms-expand {
-  display: none;
+  background-image: url('http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/br_down.png');
+	background-repeat: no-repeat, repeat;
+	background-position: right 0.7rem top 50%, 0 0;
+	background-size: 0.65rem auto, 100%;
 }
 
 select:invalid {
   color: gray;
 }
 
+select::-ms-expand {
+  display: none;
+}
+
 input[type="submit"] {
   border-radius: 3px;
   background-color: #8db600;
-  margin: 25px 0 0;
+  margin-bottom: 0;
   transition: background-color 0.4s;
 }
 
